// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PopoverPreview snapshots should render PopoverPreview 1`] = `
<DocumentFragment>
  <div
    class="PopoverPreview"
    data-test-popover-preview=""
  >
    <p
      class="css-1jnxvbp Typography Typography--neutral-1 Typography--regular Typography--normal Typography--p"
      data-test-text=""
      style="opacity: 0.5; text-align: inherit;"
    >
      Preview
    </p>
    children
  </div>
</DocumentFragment>
`;

exports[`PopoverPreview snapshots should render when active preview 1`] = `
<DocumentFragment>
  <div
    class="PopoverPreview"
    data-test-popover-preview=""
  >
    children
  </div>
</DocumentFragment>
`;
